# delivery_routing

./: .gitignore  ANDROID_DEVELOPMENT_PROMPT.txt  IMPLEMENTATION_LOGS.md  IMPLEMENTATION_SUMMARY.md  README.md  capture.py
backend/: .gitignore  API_README.md  CONFIGURAR_MAPBOX_TOKEN.md  Cargo.toml  IMPLEMENTACION_COMPLETA_RESUMEN.txt  IMPLEMENTACION_PROMPTS_BACKEND.md  INSTRUCCIONES.md  INSTRUCCIONES_PARA_PI.md  MEJORAS_VALIDACION_IMPLEMENTADAS.md  PROMPT_ANDROID_BACKEND_INTEGRATION.txt  PROMPT_ANDROID_FIX.txt  PROMPT_ANDROID_FLUJO_COMPLETO_401.txt  PROMPT_ANDROID_JSON_FIX.txt  README.md  REPORTE_CODIGO_BACKEND_ANALISIS_401.txt  REPORTE_COMPARTIDO_VENTANA_UNICA.txt  REPORTE_IMPLEMENTACION_COLIS_PRIVE.txt  REPORTE_TEST_API_COLIS_PRIVE.md  REPORTE_TEST_MANUAL_COMPLETO.txt  SOLUCION_PASSWORD_DESERIALIZACION.md  SOLUCION_USERNAME_COLIS_PRIVE.md  VALIDACION_INTELIGENTE_IMPLEMENTADA.md  config.example.rs  env.example  reporte_flujo_colis_prive.txt  reporte_reconexion_401_colis_prive.txt  run_example.sh  test_api.sh  test_complete_flow_detailed.sh
backend/schema/: 01_companies_and_users.sql  02_vehicle_documents_and_damages.sql  03_packages_and_analytics.sql  04_functions_triggers_security.sql  05_views_examples_and_data.sql  06_api_integration_functions.sql  README.md  complete_schema.sql  indexes_and_triggers.sql  install_complete_schema.sh  install_schema.sh  migration_add_new_fields.sql  migration_api_integrations.sql  migration_optimizations.sql
backend/scripts/: setup_backend.sh  setup_mapbox_on_pi.sh  setup_mapbox_token.sh  setup_pi_remote.sh  test_address_validation.sh  test_auth_only.sh  test_colis_prive_api.sh  test_colis_prive_direct.sh  test_comparison_curl_direct.sh  test_complete_flow.sh  test_diagnostic_logging.sh  test_endpoints.sh  test_geocoding.sh  test_new_login.sh  test_sony_full_flow.sh  test_sony_login.sh  test_structured_endpoint.sh  test_validation_on_pi.sh  test_web_api.sh  test_web_api_fixed.sh  test_with_real_credentials.sh  update_pi.sh
backend/src/: client.rs  config.example.rs  config.rs  external_models.rs  external_utils.rs  lib.rs  main.rs  migration.rs  state.rs  utils.rs
backend/src/api/: analytics.rs  auth.rs  colis_prive.rs  colis_prive_router.rs  companies.rs  geocoding.rs  mod.rs  packages.rs  tournees.rs  users.rs  vehicles.rs
backend/src/cache/: mod.rs  tournee_cache.rs
backend/src/config/: database.rs  environment.rs  mod.rs
backend/src/database/: connection.rs  mod.rs
backend/tests/: api_tests.rs  colis_prive_integration.rs
(+113 files in other folders)
