[package]
name = "delivery-optimizer"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "macros", "rust_decimal"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# Decimal numbers
rust_decimal = "1.32"

# Validation
validator = { version = "0.16", features = ["derive"] }

# JWT
jsonwebtoken = "9.2"

# Password hashing
bcrypt = "0.15"

# Error handling
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP types
http = "1.0"

# Utilities
num-traits = "0.2"
